--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen">
 </head>
 
-<body ng-controller="mapController">
+<body ng-controller="mapController" ng-cloak>
 
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand">{{strings.app_name}}</span>
+        <span class="navbar-brand">Ocellus</span>
       </div>
 
 
@@ -36,11 +36,11 @@
 
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter by category <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
               <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#" ng-click="filter_category('all')">All {{strings.app_categories}}</a></li>
+              <li><a href="#" ng-click="filter_category('all')">All categories</a></li>
             </ul>
           </li>
         </ul>
@@ -64,11 +64,13 @@
                TBD: are there any time filters at play here
               <li><a href="" ng-click="showMyEvents()">My events</a></li>
               -->
+              <!--
               <li role="separator" class="divider"></li>
               <li><a>Current center: <strong>{{center.lat}} {{center.lng}}</strong> </a></li>
               <li><a>Markers: <strong>{{markersAll.length}}</strong></a></li>
               <li><a>Cat Filtered Markers: <strong>{{markers.length}}</strong></a></li>
               <li><a>Search Filtered Markers: <strong>{{markersFiltered.length}}</strong></a></li>
+              -->
             </ul>
           </li>
         </ul>
@@ -77,14 +79,13 @@
     </div>
     <!-- /.container-fluid -->
   </nav>
-
-  <div id="text_only"></div>
-  <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak>
-    No {{currentView | lowercase}} {{selectedCategory}} events available.
-  </div>
-  <table class="table" role="presentation">
-
-    <tr ng-repeat="event in textEvents  | orderBy:'startTime'" class="row">
+  <div role="main">
+    <div id="text_only"></div>
+    <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak>
+      No {{currentView | lowercase}} {{selectedCategory}} events available.
+    </div>
+    <table class="table" role="presentation">
+      <tr ng-repeat="event in textEvents  | orderBy:'startTime'" class="row">
         <td class="col-lg-1 col-md-1 col-sm-1 col-xs-1" style="text-align:center;vertical-align:middle;background:{{(event.category | textOnlyCategory).background}}">
           <i style="color: #fff;font-size:25px" class="glyphicon glyphicon-{{(event.category | textOnlyCategory).icon}}"></i><br>
         </td>
@@ -114,78 +115,77 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
+            <h4 class="modal-title" id="bofModalLabel">Create event</h4>
           </div>
           <div class="modal-body">
             <div ng-include="'views/event-create.html'"></div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" ng-click="postEvent()">{{strings.modal_post}}</button>
+            <button type="button" class="btn btn-primary" ng-click="postEvent()">Add Event</button>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Edit Modal -->
-    <div class="modal fade" id="bofModalEdit" tabindex="-1" role="dialog" aria-labelledby="bofModalEditLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="bofModalEditLabel">Edit Event</h4>
-          </div>
-          <div class="modal-body">
-            <div ng-include="'views/event-edit.html'"></div>
-          </div>
-          <div class="modal-footer container-flex">
-            <div class="row">
-              <div class="col-lg-6">
-                <button type="button" class="btn btn-danger pull-left" ng-click="eventEditCancel()">Cancel Event</button>
-              </div>
-              <div class="col-lg-6">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="eventEditPost()">Save Event</button>
-              </div>
+      <!-- Edit Modal -->
+      <div class="modal fade" id="bofModalEdit" tabindex="-1" role="dialog" aria-labelledby="bofModalEditLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="bofModalEditLabel">Edit Event</h4>
             </div>
+            <div class="modal-body">
+              <div ng-include="'views/event-edit.html'"></div>
+            </div>
+            <div class="modal-footer container-flex">
+              <div class="row">
+                <div class="col-lg-6">
+                  <button type="button" class="btn btn-danger pull-left" ng-click="eventEditCancel()">Cancel Event</button>
+                </div>
+                <div class="col-lg-6">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary" ng-click="eventEditPost()">Save Event</button>
+                </div>
+              </div>
 
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- My Events Modal -->
-    <div class="modal fade" id="myEventsModal" tabindex="-1" role="dialog" aria-labelledby="myEventsLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myEventsLabel">My Events</h4>
-          </div>
-          <div class="modal-body">
-            <div ng-include="'views/myevents.html'">
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Coords LookUp Modal -->
-    <div class="modal fade" id="coordsLookUpModal" tabindex="-1" role="dialog" aria-labelledby="coordsLookUpLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="coordsLookUpLabel">Specify Address</h4>
+
+      <!-- My Events Modal -->
+      <div class="modal fade" id="myEventsModal" tabindex="-1" role="dialog" aria-labelledby="myEventsLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myEventsLabel">My Events</h4>
+            </div>
+            <div class="modal-body">
+              <div ng-include="'views/myevents.html'">
+              </div>
+            </div>
           </div>
-          <div class="modal-body">
-            <div ng-include="'views/coords-lookup.html'"></div>
+        </div>
+      </div>
+
+      <!-- Coords LookUp Modal -->
+      <div class="modal fade" id="coordsLookUpModal" tabindex="-1" role="dialog" aria-labelledby="coordsLookUpLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="coordsLookUpLabel">Specify Address</h4>
+            </div>
+            <div class="modal-body">
+              <div ng-include="'views/coords-lookup.html'"></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
     <!-- libraries -->
     <script src="bower_components/leaflet/dist/leaflet.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -200,7 +200,7 @@
     <!-- grunt concatenated app files -->
     <script src="js/dist/all.min.js"></script>
 
-
+  </div>
 
   </body>
 
