--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -99,18 +99,35 @@
             <small>{{event.dateBlob}}</small>
           </p>
           <br>
+          <p ng-show="event.intention">
+            Intention: {{event.intention.intention | capitalize}}
+          </p>
           <p class="list-group-item-text">
             {{event.message}}
           </p>
         </td>
         <td class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="text-align:right">
-          <button data-toggle="modal" data-target="#bofModalEdit" data-event="{{event}}" ng-if="event.mine && event.inTime" type="button" class="btn btn-primary editEvent">Edit <span class="sr-only">{{event.title}} event</span></button>
-          <div class="btn-group btn-group-sm btn-group-justified" ng-show="!event.mine">
-            <a role="button" href="" class="btn btn-primary" style="color:#fff" ng-click="intend('going', event.url)">
+          <div ng-show="!event.mine && event.intention">
+            <div class="btn-group btn-group-sm btn-group-justified">
+              <a href="" ng-if="event.intention.intention!=='going' && event.inTime" class="btn btn-primary declareIntentPut" style="color:#fff"  data-intention="going" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
+                Going
+              </a>
+              <a href="" ng-if="event.intention.intention==='going' && event.inTime" class="btn btn-default declareIntentPut" data-intention="maybe" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
+                Maybe going
+              </a>
+            </div>
+          </div>
+          <div class="btn-group btn-group-sm btn-group-justified" ng-show="!event.mine && !event.intention && event.inTime">
+            <a href="" class="btn btn-primary declareIntentPost" style="color:#fff"  data-intention="going" data-event="{{event.url}}" data-method="POST">
               Going
             </a>
-            <a role="button" href="" class="btn btn-default" data-intention="maybe" data-event="{{event.url}}" ng-click="intend('maybe', event.url)">
+            <a href="" class="btn btn-default declareIntentPost" data-intention="maybe" data-event="{{event.url}}">
               Maybe
+            </a>
+          </div>
+          <div class="btn-group btn-group-sm btn-group-justified" ng-show="event.mine && event.inTime">
+            <a data-toggle="modal" data-target="#bofModalEdit" data-event="{{event}}" role="button" href="" class="btn btn-primary editEvent" style="color:#fff" >
+              Edit
             </a>
           </div>
         </td>
