TLMBLGIS-153 - add a text status showing what category is being filtered on for tablets and large screens

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -53,6 +53,7 @@
               <li><a href="#" ng-click="filter_category('all')">All categories</a></li>
             </ul>
           </li>
+          <li ng-show="category" class="visible-lg-inline visible-md-inline"><p class="navbar-text">Showing: {{category}}</p></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
